force-app/main/default/objects/PWChrono_Leave_Type__c/PWChrono_Leave_Type__c.object-meta.xml
<CustomObject>
    <label>PWChrono Leave Type</label>
    <nameField>
        <label>Leave Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PWChrono Leave Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>