force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Allow_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Allow_Half_Day__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Half Day</label>
    <type>Checkbox</type>
</CustomField>