force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Allow_Negative_Balance__c.field-meta.xml
<CustomField>
    <fullName>Allow_Negative_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Negative Balance</label>
    <type>Checkbox</type>
</CustomField>