force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Applicable_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Applicable_After_Days__c</fullName>
    <description>Days after joining before employee is eligible for this leave type</description>
    <label>Applicable After Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>