force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <label>Color Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>