force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Include_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Include_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Holidays</label>
    <type>Checkbox</type>
</CustomField>