force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Include_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Include_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Weekends</label>
    <type>Checkbox</type>
</CustomField>