force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Is_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Is_Carry_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Carry Forward</label>
    <type>Checkbox</type>
</CustomField>