force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Is_Encashable__c.field-meta.xml
<CustomField>
    <fullName>Is_Encashable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Encashable</label>
    <type>Checkbox</type>
</CustomField>