force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Is_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Is_Unpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unpaid</label>
    <type>Checkbox</type>
</CustomField>