force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Max_Carry_Forward_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Carry_Forward_Days__c</fullName>
    <label>Max Carry Forward Days</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>