force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Max_Consecutive_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Consecutive_Days__c</fullName>
    <label>Max Consecutive Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>