force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Max_Days_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Allowed__c</fullName>
    <label>Max Days Allowed</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>