force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Min_Days_Per_Request__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Per_Request__c</fullName>
    <label>Min Days Per Request</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>