force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If checked, leave applications of this type require manager approval.</description>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>