force-app/main/default/objects/PWChrono_Leave_Type__c/fields/Requires_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Requires_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, leave applications of this type require a medical certificate or attachment.</description>
    <label>Requires Certificate</label>
    <type>Checkbox</type>
</CustomField>