force-app/main/default/objects/PWChrono_Leave_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicable_After_Days__c</columns>
    <columns>Allow_Negative_Balance__c</columns>
    <columns>Description__c</columns>
    <columns>Include_Holidays__c</columns>
    <columns>Include_Weekends__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Requires_Approval__c</columns>
    <columns>Requires_Certificate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>